POSTNLM2-1279 : fixed incorrect radio button alignment in checkout in firefox

--- a/view/frontend/web/css/deliveryoptions.css
+++ b/view/frontend/web/css/deliveryoptions.css
@@ -243,6 +243,7 @@
 .postnl-delivery-options .delivery .days .wrapper ul li .tig-postnl-delivery-radio,
 .postnl-delivery-options .delivery .days .wrapper ol li .tig-postnl-delivery-radio {
   position: absolute;
+  left: 15px;
 }
 .postnl-delivery-options .delivery .days .wrapper ul li .tig-postnl-delivery-time,
 .postnl-delivery-options .delivery .days .wrapper ol li .tig-postnl-delivery-time {
